- UI - fixed dark mode coloring for calendar

--- a/ClashBot-UI/src/app/pages/welcome-dashboard/welcome-dashboard/welcome-dashboard.component.scss
+++ b/ClashBot-UI/src/app/pages/welcome-dashboard/welcome-dashboard/welcome-dashboard.component.scss
@@ -43,11 +43,6 @@
   border-radius: 50%
 }
 
-.mat-calendar-body-cell.notselected {
-  background-color:white!important;
-  border-radius: 50%
-}
-
 .header {
   font-weight: bold;
 }
